--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,10 @@
     "deploy": "wrangler deploy --minify src/index.ts"
   },
   "dependencies": {
-    "hono": "^4.6.3"
+    "@prisma/client": "^5.20.0",
+    "@prisma/extension-accelerate": "^1.2.0",
+    "hono": "^4.6.3",
+    "prisma": "^5.20.0"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20240529.0",
