--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.2",
+    "recoil": "^0.7.7",
     "sonner": "^1.5.0"
   },
   "devDependencies": {
